--- a/character_detail.html
+++ b/character_detail.html
@@ -100,7 +100,7 @@
             <!-- 캐릭터 상세 카드 -->
             <div class="bg-white rounded-xl shadow-sm border border-gray-200 overflow-hidden glass-panel">
                 <!-- 상단 배너/커버 (임시 배경색) -->
-                <div class="h-48 bg-gradient-to-r from-blue-500 to-purple-600 relative">
+                <div class="h-48 bg-gradient-to-r from-blue-500 to-purple-600 relative z-20">
                     <div class="absolute bottom-4 right-4 flex gap-2">
                         <button onclick="editCharacter()"
                             class="px-4 py-2 bg-white/20 backdrop-blur-md text-white rounded-lg hover:bg-white/30 transition-colors flex items-center gap-2">
@@ -117,13 +117,13 @@
 
                 <div class="px-8 pb-8">
                     <!-- 프로필 헤더 -->
-                    <div class="flex flex-col md:flex-row gap-8 -mt-16 mb-8 relative z-10">
-                        <div class="flex-shrink-0">
+                    <div class="flex flex-col md:flex-row gap-8 -mt-16 mb-8 relative z-30 pointer-events-none">
+                        <div class="flex-shrink-0 pointer-events-auto">
                             <img id="char-image" src="" alt="캐릭터 이미지"
                                 class="w-40 h-40 rounded-full border-4 border-white shadow-lg object-cover bg-gray-100">
                         </div>
                         <div class="flex-1 pt-16 md:pt-20">
-                            <div class="flex items-start justify-between">
+                            <div class="flex items-start justify-between pointer-events-auto">
                                 <div>
                                     <h1 id="char-name" class="text-3xl font-bold text-gray-900 mb-2"></h1>
                                     <div class="flex flex-wrap gap-2 mb-4">
@@ -220,7 +220,6 @@
     <script src="./js/utils.js"></script>
     <script src="./js/data-loader.js"></script>
     <script src="./js/character-form.js"></script>
-    <script src="./js/character-store.js"></script>
     <script>
         let character = null;
         let currentCharacterId = null;
@@ -307,21 +306,52 @@
             document.getElementById('char-personality').textContent = char.personality || '성격 및 특징 정보가 없습니다.';
             document.getElementById('char-background').textContent = char.background || '배경 스토리가 없습니다.';
 
-            // 관계 목록
-            const relationshipsList = document.getElementById('relationships-list');
-            if (char.relationships && char.relationships.length > 0) {
-                relationshipsList.innerHTML = char.relationships.map(rel => `
-                    <div class="flex items-center justify-between p-3 bg-white rounded-lg border border-gray-200">
-                        <span class="font-medium text-gray-900">${rel.targetName}</span>
-                        <span class="text-sm text-gray-500">${rel.description}</span>
-                    </div>
-                `).join('');
-            } else {
-                relationshipsList.innerHTML = '<p class="text-gray-500 text-sm text-center py-4">등록된 관계가 없습니다.</p>';
-            }
-
-            // 이벤트 목록 로드
+            // 관계 및 이벤트 목록 로드
+            loadCharacterRelationships(char.id);
             loadCharacterEvents(char.id);
+        }
+
+        // 캐릭터 관계 로드
+        async function loadCharacterRelationships(characterId) {
+            const relationshipsList = document.getElementById('relationships-list');
+
+            try {
+                // 관계 데이터 로드
+                const relationships = await dataLoader.getCharacterRelationships(characterId);
+                const relationshipTypes = await dataLoader.getRelationshipTypes();
+
+                // 모든 캐릭터 로드 (이름 표시용)
+                const project = await dataLoader.getActiveProject();
+                const allCharacters = await dataLoader.getCharacters(project.id);
+
+                if (relationships.length > 0) {
+                    relationshipsList.innerHTML = relationships.map(rel => {
+                        // 상대 캐릭터 찾기
+                        const targetId = rel.sourceId === characterId ? rel.targetId : rel.sourceId;
+                        const targetChar = allCharacters.find(c => c.id === targetId);
+                        const targetName = targetChar?.name || '알 수 없음';
+
+                        // 관계 유형 색상
+                        const typeInfo = relationshipTypes.find(t => t.type === rel.type);
+                        const color = typeInfo?.color || '#6B7280';
+
+                        return `
+                            <div class="flex items-center justify-between p-3 bg-white rounded-lg border border-gray-200">
+                                <div class="flex items-center gap-2">
+                                    <span class="w-2 h-2 rounded-full" style="background-color: ${color}"></span>
+                                    <span class="font-medium text-gray-900">${utils.escapeHtml(targetName)}</span>
+                                </div>
+                                <span class="text-sm text-gray-500">${utils.escapeHtml(rel.type)}${rel.subtype ? ' · ' + utils.escapeHtml(rel.subtype) : ''}</span>
+                            </div>
+                        `;
+                    }).join('');
+                } else {
+                    relationshipsList.innerHTML = '<p class="text-gray-500 text-sm text-center py-4">등록된 관계가 없습니다.</p>';
+                }
+            } catch (error) {
+                console.error('관계 로드 실패:', error);
+                relationshipsList.innerHTML = '<p class="text-red-500 text-sm text-center py-4">관계 정보를 불러오지 못했습니다.</p>';
+            }
         }
 
         // 캐릭터 등장 이벤트 로드
@@ -363,7 +393,7 @@
 
         // 중요도에 따른 스타일 클래스
         function getImportanceClass(importance) {
-            switch(importance) {
+            switch (importance) {
                 case '최상': return 'bg-red-100 text-red-700';
                 case '상': return 'bg-orange-100 text-orange-700';
                 case '중': return 'bg-yellow-100 text-yellow-700';
