--- a/timeline.html
+++ b/timeline.html
@@ -105,15 +105,6 @@
             <div class="bg-white rounded-lg shadow-sm border border-gray-200 p-4 mb-8 glass-panel sticky top-4 z-20">
                 <div class="flex flex-col md:flex-row gap-4 items-center justify-between">
                     <div class="flex gap-2 overflow-x-auto pb-2 md:pb-0 w-full md:w-auto">
-                        <button onclick="filterTimeline('all')" id="filter-all"
-                            class="px-4 py-2 rounded-full bg-blue-100 text-blue-700 font-medium whitespace-nowrap transition-colors">전체</button>
-                        <button onclick="filterTimeline('main')" id="filter-main"
-                            class="px-4 py-2 rounded-full bg-gray-100 text-gray-700 hover:bg-gray-200 whitespace-nowrap transition-colors">메인</button>
-                        <button onclick="filterTimeline('sub')" id="filter-sub"
-                            class="px-4 py-2 rounded-full bg-gray-100 text-gray-700 hover:bg-gray-200 whitespace-nowrap transition-colors">서브</button>
-                        <button onclick="filterTimeline('background')" id="filter-background"
-                            class="px-4 py-2 rounded-full bg-gray-100 text-gray-700 hover:bg-gray-200 whitespace-nowrap transition-colors">배경</button>
-                        <div class="w-px bg-gray-300 mx-1"></div>
                         <button onclick="toggleSortMode()" id="sort-toggle-btn"
                             class="px-4 py-2 rounded-full bg-gray-100 text-gray-700 hover:bg-gray-200 whitespace-nowrap transition-colors flex items-center gap-1">
                             <span class="material-symbols-outlined text-sm">swap_vert</span>
@@ -149,7 +140,6 @@
     <script>
         let allTimelineEvents = [];
         let filteredTimelineEvents = [];
-        let currentFilter = 'all';
         let currentProjectId = null;
         let currentSortMode = 'custom'; // 'custom' | 'chronological'
 
@@ -384,36 +374,7 @@
         // 사용자 순서 적용
         async function applyCustomOrder() {
             allTimelineEvents = await timelineStore.getTimeline(currentProjectId);
-            filteredTimelineEvents = applyCurrentFilter(allTimelineEvents);
-        }
-
-        // 현재 필터 적용
-        function applyCurrentFilter(events) {
-            if (currentFilter === 'all') {
-                return [...events];
-            }
-            return events.filter(event => event.type === currentFilter);
-        }
-
-        // 필터링
-        function filterTimeline(type) {
-            currentFilter = type;
-
-            // 필터 버튼 스타일 업데이트
-            document.querySelectorAll('[id^="filter-"]').forEach(btn => {
-                btn.className = 'px-4 py-2 rounded-full bg-gray-200 text-gray-700 hover:bg-gray-300 whitespace-nowrap';
-            });
-            document.getElementById(`filter-${type}`).className = 'px-4 py-2 rounded-full bg-blue-100 text-blue-700 font-medium whitespace-nowrap';
-
-            // 필터 적용
-            filteredTimelineEvents = applyCurrentFilter(allTimelineEvents);
-
-            // 현재 정렬 모드 적용
-            if (currentSortMode === 'chronological') {
-                sortByChronological();
-            }
-
-            renderTimeline(filteredTimelineEvents);
+            filteredTimelineEvents = [...allTimelineEvents];
         }
 
         // 검색 기능
@@ -424,11 +385,7 @@
             const searchInput = document.getElementById('search-input');
             searchInput.addEventListener('input', utils.debounce((e) => {
                 const query = e.target.value;
-                const baseEvents = currentFilter === 'all'
-                    ? allTimelineEvents
-                    : allTimelineEvents.filter(event => event.type === currentFilter);
-
-                filteredTimelineEvents = utils.searchArray(baseEvents, query, ['title', 'description', 'year']);
+                filteredTimelineEvents = utils.searchArray(allTimelineEvents, query, ['title', 'description', 'year']);
                 renderTimeline(filteredTimelineEvents);
             }, 300));
 
